fixed twilio spacing

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -386,6 +386,7 @@ form {
 
 	.twilio-container {
 		padding-top: 0.5em;
+		margin-bottom: -1em;
 		a {
 			opacity: 0.5;
 			@include transition(opacity);
